src/objects/booking__ChatterOption__c.object
<CustomObject>
    <fields>
        <fullName>booking__Booking_prefix__c</fullName>
        <description>The prefix that is displayed before the Booking Subject</description>
        <inlineHelpText>The prefix that is displayed before the Booking Subject.
&lt;New&gt; Mortgage Appointment for John Smith on 15 Feb 8 am.</inlineHelpText>
        <label>Booking prefix</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>booking__Booking_suffix__c</fullName>
        <inlineHelpText>The suffix that is displayed after the Booking Subject.
New Mortgage Appointment &lt;for&gt; John Smith on 15 Feb 8 am.</inlineHelpText>
        <label>Booking suffix</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>booking__Booking_time_suffix__c</fullName>
        <inlineHelpText>The suffix that is displayed after the time for a Booking.
New Mortgage Appointment for John Smith on15 Feb 8 am&lt;your text here&gt;</inlineHelpText>
        <label>Booking time suffix</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>booking__Customer_suffix__c</fullName>
        <description>The suffix that is displayed after the customer&apos;s name.
New Mortgage Appointment for John Smith &lt;on&gt; 15 Feb 8 am.</description>
        <inlineHelpText>The suffix that is displayed after the customer&apos;s name.
New Mortgage Appointment for John Smith &lt;on&gt; 15 Feb 8 am.</inlineHelpText>
        <label>Customer suffix</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>booking__Enable_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable Chatter feed for new Bookings and Customers.
It is enabled by default.</inlineHelpText>
        <label>Enable Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>booking__Post_to_Booking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post to Booking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>booking__Post_to_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post to Customer</label>
        <type>Checkbox</type>
    </fields>
    <label>Chatter Option</label>
    <listViews>
        <fullName>booking__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Chatter Option</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chatter Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>